# rag_backend

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
authentication/: urls.py  views.py
backend/: urls.py
rag/: admin.py  doc_add.py  models.py  permissions.py  retrieval_qa.py  roles.py  serializers.py  urls.py  views.py
rag/tests/: test_serializers.py
